# archist

./: .gitignore  .pre-commit-config.yaml  README.md  build.sh  pyproject.toml
codegen/: arches.py  build_src.py  regs.py  util.py  validate_modes.py
codegen/templates/: arches.py.jinja  autogen_warning.jinja  init.py.jinja  modes.py.jinja  wrapper_args.py.jinja
src/archist/: __init__.py  arch.py  arches.py  core.py  extensions.py  modes.py
src/archist/extensions/: __init__.py  binja.py  ghidra.py  lief.py  pyelftools.py
tests/: Dockerfile.cross-compile  build_elfs.sh  conftest.py  test_archist.py  test_binja.py  test_capstone.py  test_capstone_wrappers.py  test_ghidra.py  test_keystone.py  test_keystone_wrappers.py  test_lief.py  test_modes.py  test_pyelftools.py  test_qiling.py  test_unicorn.py  test_unicorn_wrappers.py
